statics/styles/style.css
/**
 * Global style
 */
body,
input,
textarea,
button
{
    font-size: 16px;
    font-family: '微軟正黑體', 'Microsoft JhengHei', '微软雅黑', 'Microsoft YaHei', 'WenQuanYi ZenHei', Arial, sans-serif;
}

body
{
    background: #DCE4ED url('../images/header.png') repeat-x;
    margin: 0 auto;
    overflow-x: hidden;
    overflow-y: scroll;
    padding: 0;
    width: 1000px;
}

img
{
    border: none;
}

h2
{
    display: none;
}

h4
{
    font-size: 1.8em;
    font-weight: bolder;
    padding: 0 0 10px;
    margin: 0;
}

h5
{
    font-size: 1.4em;
    font-weight: bolder;
    padding: 0 0 5px;
    margin: 0;
}

h6
{
    font-size: 1.2em;
    font-weight: bolder;
    padding: 0 0 3px;
    margin: 0;
}

form
{
    margin: 0;
}

form dl
{
    margin: 4px 0;
    padding: 4px 0;
    position: relative;
    width: 50%;
}

form dt,
form dd
{
    margin: 0;
    overflow: visible;
    padding: 0 5% 0 0;
    width: 95%;
}

form dt
{
    position: absolute;
}

form dt label
{
    cursor: text;
}

form input,
form textarea,
form button
{
    background: #FFFFFF;
    border: 1px solid #B0B0B0;
    box-shadow: 0 0 0 #000000, 0 3px 3px #D3D3D3 inset;
    border-radius: 5px;
    height: 30px;
    outline: none;
    padding: 4px 8px;
    position: relative;
    width: 100%;
}

form textarea
{
    height: 160px;
    resize: none;
}

form button
{
    cursor: pointer;
    height: 40px;
    float: right;
    margin-left: 20px;
    padding: 4px 16px;
    width: auto;
}

form select
{
    outline: none;
}

form input:hover,
form textarea:hover,
form button:hover,
form input:focus,
form textarea:focus,
form button:focus
{
    border: 1px solid #909090;
}

form dt label
{
    color: #474747;
    display: block;
    line-height: 30px;
    padding: 4px 8px;
    position: relative;
    width: 100%;
    z-index: 1000;
}

form dl.textarea
{
    width: 100%;
}

form dl.radio,
form dl.checkbox,
form dl.select
{
    background: #FFFFFF;
    border: 1px solid #B0B0B0;
    border-radius: 5px;
    height: 38px;
    padding: 0 8px;
    width: 47.5%;
}

form dl.radio:hover,
form dl.checkbox:hover,
form dl.select:hover
{
    border: 1px solid #909090;
}

form dl.radio dt,
form dl.checkbox dt,
form dl.select dt
{
    display: none;
}

form dl.radio input,
form dl.checkbox input
form dl.select input
{
    float: left;
    width: auto;
}

form dl.radio dd label,
form dl.checkbox dd label,
form dl.select dd label
{
    color: #474747;
    float: left;
    line-height: 30px;
    padding: 4px 8px;
}

form dd > span
{
    background: #646464;
    background: rgba(100, 100, 100, 0.7);
    border-radius: 5px;
    color: #FFFFFF;
    display: none;
    left: 103%;
    line-height: 20px;
    margin: 6px -4px;
    min-height: 20px;
    position: absolute;
    padding: 8px;
    top: 0;
    width: 85%;
    word-break: break-all;
}

form dd .arrow
{
    border-color: transparent #646464 transparent transparent;
    border-color: transparent rgba(100, 100, 100, 0.7) transparent transparent;
    border-style: dashed solid dashed dashed;
    border-width: 12px;
    display: block;
    left: -32px;
    height: 0;
    margin-bottom: -24px;
    position: relative;
    top: -2px;
    width: 0;
}

form div.buttons
{
    margin-top: 4px;
    width: 50%;
}

form div.buttons:after
{
    content: '\A';
    white-space: pre;
}

a
{
    color: #5C5C5C;
    text-decoration: none;
}

a:hover
{
    color: #7C7C7C;
}

.ui-dialog
{
    position: absolute;
}

.ui-widget-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000000;
    opacity: 0.7;
}

.scroll-container
{
    position: relative;
}

.scroll-container .scroll-bar
{
    display: none;
    height: 98%;
    right: 2px;
    margin-top: -1px;
    position: absolute;
    top: 1%;
    width: 6px;
}

.scroll-container .scroll-track
{
    background: #646464;
    background: rgba(100, 100, 100, 0.7);
    border: 1px solid #646464;
    border-radius: 5px;
    position: relative;
    height: 100%;
}

.scroll-container .scroll-dragable
{
    background: #000000;
    border-radius: 5px;
    cursor: pointer;
    opacity: 0.7;
    position: relative;
    top: 0;
}

.scroll-content
{
    overflow: hidden;
}

.loading
{
    background: url('../images/loading.png');
    height: 128px;
    left: 50%;
    margin: -64px 0 0 -64px;
    position: relative;
    top: 50%;
    width: 128px;
}

.overlay
{
    background: #000000;
    height: 100%;
    left: 0;
    opacity: 0.7;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
}

.confirm,
.alert
{
    background: #FFFFFF;
    border: 1px solid #333333;
    box-shadow: 0 0 0 #000000, 0 3px 3px #D3D3D3 inset;
    border-radius: 5px;
    height: 160px;
    position: fixed;
    width: 320px;
}

.confirm-title,
.alert-title
{
    border-radius: 5px 5px 0 0;
    font-size: 1.5em;
    height: 25px;
    margin: 0 0 -25px 0;
    padding: 0 10px;
}

.confirm-message,
.alert-message
{
    border-bottom: 1px solid #333333;
    display : table-cell;
    height: 80px;
    margin: 0;
    padding: 20px;
    text-align: center;
    vertical-align : middle;
    width: 320px;
}

.confirm-buttons
{
    background: #EBEBEB;
    border-radius: 0 0 5px 5px;
    height: 40px;
    text-align: center;
}

.confirm-button
{
    background: #FFFFFF;
    border: 1px solid #D6D6D6;
    box-shadow: 0 0 0 #000000, 0 3px 3px #D3D3D3 inset;
    border-radius: 5px;
    cursor: pointer;
    height: 30px;
    line-height: 18px;
    margin: 5px 10px;
    padding: 5px 15px;
}

.confirm-button:hover
{
    border: 1px solid #909090;
}

#lightbox
{
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 10000;
}

#lightbox-box
{
    background: #FFFFFF;
    height: 320px;
    left: 0;
    margin: 0 auto;
    position: relative;
    top: 0;
    width: 320px;
}

#lightbox-loading
{
    position: absolute;
}

#lightbox-image
{
    max-height: 480px;
    max-width: 640px;
    position: absolute;
    padding: 10px;
}
/* ... */

